feat: timer logic and style

--- a/src/components/Stopwatch/Stopwatch.module.css
+++ b/src/components/Stopwatch/Stopwatch.module.css
@@ -1,7 +1,7 @@
 .container {
     height: 600px;
     width: 400px;
-    border: 1px solid red;
+    border: 1px solid #9e9e9e;
     display: flex;
     flex-direction: column;
 }
@@ -12,4 +12,19 @@
     height: 300px;
     align-items: center;
     overflow: hidden;
+}
+
+.previousElapsedTime { 
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (max-width:480px)  { 
+    .container {
+        height: 100%;
+        width: 100%;
+        border: none; 
+    }
 }
